--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,15 @@ extensions:
     # 仅当使用discus时生效
     discus_identifier: tinyzzh815
     comments_curtain: yes
+  date_format: "%Y-%m-%d"
+
+locale: zh
+data:
+  ui-text:
+    zh:
+      less_than: 少于
+      minute_read: 分钟阅读
+      recent_posts: 最 新 文 章
 
 # Build settings
 markdown: kramdown
