optimize config.xml
移除bat脚本文件.
启用jekyll内置的sass编译器

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,8 @@ exclude:
     "package.json",
     "yarn.lock",
     "package-lock.json",
-    "assets/css/sass/",
+    # "assets/css/sass/",
+    "*.bat",
   ]
 
 locale: zh
