修改kramdown的单个反引号表现

--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,7 @@ markdown: kramdown
 
 kramdown:
   highlighter: rouge
+  smart_quotes: ldquo,rdquo
   syntax_highlighter_opts:
     line_numbers: true
 mathjax: true
