尝试disable_inline_lexer

--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   syntax_highlighter_opts:
     line_numbers: true
+    disable_inline_lexer: true
 mathjax: true
 highlighter: rouge
 
