--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ stackoverflow: stackoverflow # Add your stackoverflow account
 mailchimp:
 
 # Tracker
-google_analytics: UA-77019170-1
+google_analytics: G-VN305RQQ75
 baidu_analytics: "f5d72321042a4068a214bb314ca29e38"
 fbadmin:
 
